fix text too large on desktop

--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@ body {
 	align-items: center;
     min-height: 100vh;
     font-family: "Manrope Variable";
-    font-size: 3rem;
+}
+
+@media (max-width: 1000px) {
+    body {
+    font-size: 2rem;
+    }
 }
 
 .btn {
